style.css
/* html {
    overflow: auto;
} */

body {
    overflow: hidden;
}

.no-js #loader { display: none;  }
.js #loader { display: block; position: absolute; left: 100px; top: 0; }
.se-pre-con {
	position: fixed;
	left: 0px;
	top: 0px;
	width: 100%;
	height: 100%;
	z-index: 9999;
    background: url(./JryDnHj.gif);
    background-repeat: no-repeat;
	background-position: center center;
	background-size: cover;
    background-attachment: fixed;
}



nav.navbar {
    padding: 0 2rem .5% 2rem;
    background: white !important;
    -webkit-background-clip: padding-box; /* for Safari */
    background-clip: padding-box; /* for IE9+, Firefox 4+, Opera, Chrome */
    /* padding-bottom: .5%; */
    /* position: relative; */
    z-index : 1;
}

.navbar-brand {
    margin-right: 8.5rem;
}

.logo {
    padding-left: 0;
}

ul {
    margin-top: 1%;
}

.scroll {
    font-weight: bold;
    /* vertical-align: middle; */
    color: rgb(87, 87, 87);
    font-family: 'Cinzel', serif;
    padding: 1%;
}

.scroll:hover {
    text-shadow: 2px 2px 4px rgba(94, 94, 94, 0.5);
    transition: text-shadow 0.2s ease-in-out;
    color: rgb(94, 94, 94) !important;
}

.social {
    padding-right: 0;
}

.social i {
    color: rgb(87, 87, 87);
}

#myBtn {
    display: none;
    position: fixed;
    bottom: 20px;
    right: 25px;
    z-index: 99;
    /* font-size: 20px; */
    font-family: 'Playfair Display', serif;
    font-weight: bold;
    border: 1px solid white;
    outline: none;
    background-image: url("./pink.jpg");
    background-repeat: no-repeat;
	background-position: center center;
	background-size: cover;
	background-attachment: fixed;
    color: white;
    animation-duration: 2s;
    animation-delay: 1s;
    animation-iteration-count: infinite;
    cursor: pointer;
    padding: 10px 15px;
    border-radius: 4px;
    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
    /* border: 3px solid rgba(0, 0, 0, .6); */
    -webkit-background-clip: padding-box; /* for Safari */
    background-clip: padding-box; /* for IE9+, Firefox 4+, Opera, Chrome */
}

#myBtn i {
    text-shadow: 3px 3px 8px #555;
    transition: text-shadow 0.2s ease-in-out;
    font-size: xx-large;
}

section {
    background-repeat: no-repeat;
	background-position: center center;
	background-size: cover;
	background-attachment: fixed;
    width: 100%;
    margin: 0;
}

#sec1 {
    height: 100vh;
}

.headline {
    margin: 4% 0 3% 0;
    text-align: center;
    color: rgb(49, 49, 49);
    font-family: 'Cinzel', serif;
}

.pink-banner {
    padding: 0;
}

.banner {
    background-image: url("./pink.jpg");
    background-repeat: no-repeat;
	background-position: center center;
	background-size: cover;
	background-attachment: fixed;
    width: 100%;
    margin: 0;
    height: 57vh;
    width: 100%;
    display: flex;
	flex-direction: row;
	flex-wrap: nowrap;
	justify-content: center;
	align-items: center;
	align-content: center;
}

.carousel {
    height: 80%;
    width: 33%;
}

.carousel-indicators li {
    width: 10px;
    height: 10px;
    border-radius: 100%;
}

.info {
    font-family: 'Cinzel', serif;
    text-align: center;
    margin-top: 2%;
    color: rgb(49, 49, 49);
}

.bullet {
    color: rgba(88, 88, 88, 0.6);
    padding: 0 10px;
}

#sec2 {
    min-height: 95vh;
}

.banner-sec2 {
    background-image: url("./pink.jpg");
    background-repeat: no-repeat;
	background-position: center center;
	background-size: cover;
	background-attachment: fixed;
    width: 100%;
    margin: 0;
    height: 5vh;
}

.bio {
    margin: 5% 2%;
}

.bio img {
    height: 60vh;
    margin-right: 2%;
    margin-bottom: 5%;
}

.imagepreview {
    max-height: auto;
    width:100%;
}

#sec3 {
    min-height: 95vh;
}

.headline-sec3 {
    text-align: center;
    margin: 10px 0 15px 0;
    padding-top: 2%; 
    color: rgb(49, 49, 49);
    font-weight: lighter;
    font-family: 'Cinzel', serif;
}

.events, .past-events {
    margin-bottom: 2%;
    width: 100%;
    padding: 0 2%;
}

.events-title, .past-events-title {
    margin: 2% 0;
    text-align: center;
    font-family: 'Cinzel', serif;
}

.list-group a {
    text-decoration: none;
    color: inherit;
}

.list-group-item {
    margin: 1% 0;
    box-shadow: 0 10px 6px -6px rgba(33,33,33,.2);
    -webkit-transition: box-shadow .3s;
    transition: box-shadow .3s;
    padding: .75rem;
}

.list-group-item:hover {
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
}

.past-events-list {
    pointer-events: none;
    opacity: 0.4;
}

.badge {
    float: left;
    padding: 0;
    margin-right: 2.5%;
}

.badge img{
    height: 90px;
    width: 90px;
    border: 1px solid rgba(141, 141, 141, 0.5);
    border-radius: 4px;
}

.date {
    margin-top: inherit;
}

.event-info {
    margin-left: 7rem;
}

.event-title {
    color: rgb(78, 78, 78);
}

.event-text {
    margin: 0;
    font-size: small;
}

p.event-text {
    color: rgb(78, 78, 78);
    font-family: 'Bitter', serif;
}

.event-btn {
    margin-top: 8%;
}

#sec4 {
    min-height: 95vh;
}

.gallery {
    background-image: url("./glitter.jpg");
    background-repeat: no-repeat;
	background-position: center center;
	background-size: cover;
	background-attachment: fixed;
    margin: 7% 0;
}

.center {
    width:90%;
    margin:50px auto;
}

.slick-slide{
    margin: 10px;
}

.slick-slide img{
    width:100%;
    border: 2px solid #fff;
    height: 40vh;
}

footer {
    background-image: linear-gradient(to bottom, #3f51b5, #6f7dcc);
    position: relative;
    min-height: 100vh;
    color: white;
    display: flex;
	flex-direction: row;
	flex-wrap: nowrap;
	justify-content: center;
	align-items: stretch;
    align-content: stretch;
    z-index: 100;
    overflow: hidden;
	-webkit-box-shadow: inset #000 0 7px 35px 0;
	-moz-box-shadow: inset #000 0 7px 35px 0;
	box-shadow: inset 0 12px 30px -12px #000;
}

a.contact{
    text-decoration: inherit;
    font-weight: bold;
    color: white;
    font-family: 'Cinzel', serif;
    padding: 1%;
}

.contact:hover {
    text-shadow: 2px 2px 4px rgba(94, 94, 94, 0.5);
    transition: text-shadow 0.2s ease-in-out;
    color: rgb(240, 240, 240) !important;
}

a#contact-home {
    cursor: pointer;
}

.contact-main {
    margin-top: 2%;
}

.bottom-footer {
    position: absolute;
    bottom: 0;
    left: 0;
    width: 100%;
}

.copyright {
    padding-left: 5%;
}

.contact-social {
    padding-right: 2%;
}

.btn-floating {
    width: 50px;
    height: 50px;
    padding: 6px 0px;
    margin: 0 2%;
    border-radius: 25px;
    text-align: center;
    font-size: 16px;
    line-height: 2.42857;
    box-shadow: 0 5px 11px 0 rgba(0,0,0,.18), 0 4px 15px 0 rgba(0,0,0,.15);
}

.btn-floating:hover {
    box-shadow: 0 8px 17px 0 rgba(0,0,0,.2), 0 6px 20px 0 rgba(0,0,0,.19);
}


@media (max-width: 575.98px) {
    .container-fluid {
        margin: 0;
    }

    .navbar {
        padding: 0 1%;
    }

    .navbar-nav span {
        display: none;
    }

    .scroll {
        margin: 1% 0;
    }

    .social {
        display: flex;
        flex-direction: row;
        margin-bottom: 2%;
        justify-content: center;
    }

    #myBtn {
        visibility: hidden;
    }

    .carousel {
        height: 90%;
        width: 90%;
    }

    #sec2 {
        height: auto;
    }

    .bio {
        margin: 8% 0;
    }

    .bio img {
        height: auto;
        width: 100%;
        margin-right: 0;
    }

    .pop {
        width:100%;
        margin: 5% auto;
        display: flex;
        flex-direction: row;
        flex-wrap: nowrap;
        justify-content: center;
        align-items: center;
        align-content: center;
    }

    .events, .past-events {
        margin-top: 2%;
        width: 100%;
    }

    .list-group-item {
        padding: 12px 10px;
    }

    .badge img {
        height: 115px;
        width: 115px;
    }

    .event-info {
        margin-left: 32%;
    }

    p {
        font-size: .9em;
    }

    iframe {
        width: 100%;
    }
    
    .bottom-footer {
        position: initial;
        width: 100%;
    }

    .btn-floating {
        margin: 0 25%;
    }
}

@media (min-width: 1300px) {
    #title {
        font-size: 3em;
    }
    
    
}

